<resources>
    <string name="app_name">ПГУАС Общежитие №3</string>
    <string name="logo">ПГУАС</string>
    <string name="login">Введите логин:</string>
    <string name="password">Введите пароль:</string>
    <string name="btn1">Войти</string>
    <string name="btn2">Войти без пароля</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_del">Удалить</string>
    <string name="btn_edit">Редактировать</string>
    <string name="btn_read">Прочитать</string>
    <string name="id">ID</string>
    <string name="Users">Пользователь:</string>
    <string name="registration">Настройки пользователя.</string>
    <string name="rooms">Комнаты</string>
    <string name="search">Поиск</string>
    <string name="add_study">Добавить студента</string>
    <string name="data_manager">Управление данными</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="v_text">Введите текст</string>
    <string name="fio">Фамилия Имя Отчество:</string>
    <string name="number_dog">Номер договора:</string>
    <string name="group">Группа:</string>
    <string name="period_prog">Период проживания:</string>
    <string name="telefon">Телефон:</string>
    <string name="dop_info">Дополнительная информация (необязательно)</string>
    <string name="dop_info_text">Дополнительная информация</string>
    <string name="pasport_dann">Паспортные данные:</string>
    <string name="seriya">Серия:</string>
    <string name="nomer">Номер:</string>
    <string name="kem_v">Кем выдан:</string>
    <string name="data_v">Дата выдачи:</string>
    <string name="pol">Пол:</string>
    <string name="data_r">Дата рождения:</string>
    <string name="mesto_r">Место рождения:</string>
    <string name="mesto_g">Место жительства:</string>
    <string name="number_room">Номер комнаты:</string>
    <string name="info_rod">Информация о родителях</string>
    <string name="tel_rod">Телефон родителей:</string>
    <string name="M">М</string>
    <string name="G">Ж</string>
    <string name="btn_save_example">Сохранить структуру БД</string>
    <string name="btn_save_bd">Сохранить БД</string>
    <string name="btn_load_bd">Загрузить БД</string>
    <string name="btn_del_bd">Очистить БД</string>
    <string name="ifo_bd">Справка!</string>
    <string name="btn_room">15</string>
    <string name="study_text">Студент</string>
    <string name="study_search">Введите ФИО студента</string>
    <string name="loginPassword">Вход по паролю</string>
    <string name="insertPassword">Установить пароль для входа</string>
    <string name="version">Версия 1.0</string>
    <string name="oProg">О приложении</string>
    <string name="oProgText">Приложение разработано для общежития №3 Пензенского государственного
        университета архитектуры и строительства.
        \n\nРазработчик: Илюшин Андрей
    \n\nПоддержка: ilyushinandy@yandex.ru</string>
    <string name="author">©2022 PGUAS from Ilyushin Andrey</string>
    <string name="vodPass">Введите пароль:</string>
    <string name="povPass">Повторите пароль:</string>
    <string name="editPass">Изменить пароль</string>
    <string name="helpPass">Забыли пароль?</string>
    <string name="helpPassText">Для сброса пароля обратитесь в поддержку по электронному адресу: ilyushinandy@yandex.ru</string>
    <string name="allStudy">Всего студентов проживает: </string>
    <string name="rightStudy">В правом блоке: </string>
    <string name="leftStudy">В левом блоке: </string>
    <string name="freeRooms">Свободные комнаты: </string>
    <string name="errorRooms">Ошибка!\nНекорректные номера комнат.</string>
    <string name="btn_room_1a">1А</string>
    <string name="btn_room_2a">2А</string>
    <string name="btn_room_3a">3А</string>
    <string name="btn_room_4a">4А</string>
    <string name="btn_room_5a">5А</string>
    <string name="btn_room_6a">6А</string>
    <string name="btn_room_7a">7А</string>
    <string name="btn_room_8a">8А</string>
    <string name="btn_room_4">4</string>
    <string name="btn_room_5">5</string>
    <string name="btn_room_6">6</string>
    <string name="btn_room_7">7</string>
    <string name="btn_room_8">8</string>
    <string name="btn_room_9">9</string>
    <string name="btn_room_10">10</string>
    <string name="btn_room_11">11</string>
    <string name="btn_room_12">12</string>
    <string name="btn_room_13">13</string>
    <string name="btn_room_14">14</string>
    <string name="btn_room_15">15</string>
    <string name="btn_room_16">16</string>
    <string name="btn_room_17">17</string>
    <string name="btn_room_18">18</string>
    <string name="btn_room_19">19</string>
    <string name="btn_room_20">20</string>
    <string name="btn_room_21">21</string>
    <string name="btn_room_22">22</string>
    <string name="btn_room_23">23</string>
    <string name="btn_room_24">24</string>
    <string name="btn_room_25">25</string>
    <string name="btn_room_26">26</string>
    <string name="btn_room_27">27</string>
    <string name="btn_room_28">28</string>
    <string name="btn_room_29">29</string>
    <string name="btn_room_30">30</string>
    <string name="btn_room_31">31</string>
    <string name="btn_room_32">32</string>
    <string name="btn_room_33">33</string>
    <string name="btn_room_34">34</string>
    <string name="btn_room_35">35</string>
    <string name="btn_room_36">36</string>
    <string name="btn_room_37">37</string>
    <string name="btn_room_38">38</string>
    <string name="btn_room_39">39</string>
    <string name="btn_room_40">40</string>
    <string name="btn_room_41">41</string>
    <string name="btn_room_42">42</string>
    <string name="btn_room_43">43</string>
    <string name="btn_room_44">44</string>
    <string name="btn_room_45">45</string>
    <string name="btn_room_46">46</string>
    <string name="btn_room_47">47</string>
    <string name="btn_room_48">48</string>
    <string name="btn_room_49">49</string>
    <string name="btn_room_50">50</string>
    <string name="btn_room_51">51</string>
    <string name="btn_room_52">52</string>
    <string name="btn_room_53">53</string>
    <string name="btn_room_54">54</string>
    <string name="btn_room_55">55</string>
    <string name="btn_room_56">56</string>
    <string name="btn_room_57">57</string>
    <string name="btn_room_58">58</string>
    <string name="btn_room_59">59</string>
    <string name="btn_room_60">60</string>
    <string name="btn_room_61">61</string>
    <string name="btn_room_62">62</string>
    <string name="btn_room_63">63</string>
    <string name="btn_room_64">64</string>
    <string name="btn_room_65">65</string>
    <string name="btn_room_66">66</string>
    <string name="btn_room_67">67</string>
    <string name="btn_room_68">68</string>
    <string name="btn_room_69">69</string>
    <string name="btn_room_70">70</string>
    <string name="btn_room_71">71</string>
    <string name="btn_room_72">72</string>
    <string name="btn_room_73">73</string>
    <string name="btn_room_74">74</string>
    <string name="btn_room_75">75</string>
    <string name="btn_room_76">76</string>
    <string name="btn_room_77">77</string>
    <string name="btn_room_78">78</string>
    <string name="btn_room_79">79</string>
    <string name="btn_room_80">80</string>
    <string name="btn_room_81">81</string>
    <string name="btn_room_82">82</string>
    <string name="btn_room_83">83</string>
    <string name="btn_room_84">84</string>
    <string name="btn_room_85">85</string>
    <string name="btn_room_86">86</string>
    <string name="btn_room_87">87</string>
    <string name="btn_room_88">88</string>
    <string name="btn_room_89">99</string>
    <string name="btn_room_90">90</string>
    <string name="btn_room_91">91</string>
    <string name="btn_room_92">92</string>
    <string name="btn_room_93">93</string>
    <string name="btn_room_94">94</string>
    <string name="btn_room_95">95</string>
    <string name="btn_room_96">96</string>
    <string name="btn_room_97">97</string>
    <string name="btn_room_98">98</string>
    <string name="btn_room_99">99</string>
    <string name="btn_room_100">100</string>
    <string name="btn_room_101">101</string>
    <string name="btn_room_102">102</string>
    <string name="btn_room_103">103</string>
    <string name="btn_room_104">104</string>
    <string name="btn_room_105">105</string>
    <string name="btn_room_106">106</string>
    <string name="btn_room_107">107</string>
    <string name="btn_room_108">108</string>
    <string name="btn_room_109">109</string>
    <string name="btn_room_110">110</string>
    <string name="btn_room_111">111</string>
    <string name="btn_room_112">112</string>
    <string name="btn_room_113">113</string>
    <string name="btn_room_114">114</string>
    <string name="btn_room_115">115</string>
    <string name="btn_room_116">116</string>
    <string name="btn_room_117">117</string>
    <string name="btn_room_118">118</string>
    <string name="btn_room_119">119</string>
    <string name="btn_room_120">120</string>
    <string name="btn_room_121">121</string>
    <string name="btn_room_122">122</string>
    <string name="btn_room_123">123</string>
    <string name="btn_room_124">124</string>
    <string name="btn_room_125">125</string>
    <string name="btn_room_126">126</string>
    <string name="btn_room_127">127</string>
    <string name="btn_room_128">128</string>
    <string name="btn_room_129">129</string>
    <string name="btn_room_130">130</string>
    <string name="btn_room_131">131</string>
    <string name="btn_room_132">132</string>
    <string name="btn_room_133">133</string>
    <string name="btn_room_134">134</string>
    <string name="btn_room_135">135</string>
    <string name="btn_room_136">136</string>
    <string name="btn_room_137">137</string>
    <string name="btn_room_138">138</string>
    <string name="btn_room_139">139</string>
    <string name="btn_room_140">140</string>
    <string name="btn_room_141">141</string>
    <string name="btn_room_142">142</string>
    <string name="btn_room_143">143</string>
    <string name="btn_room_144">144</string>
    <string name="btn_room_145">145</string>
    <string name="btn_room_146">146</string>
    <string name="btn_room_147">147</string>
    <string name="btn_room_148">148</string>
    <string name="btn_room_149">149</string>
    <string name="btn_room_150">150</string>
    <string name="btn_room_151">151</string>
    <string name="btn_room_152">152</string>
    <string name="btn_room_153">153</string>
    <string name="btn_room_154">154</string>
    <string name="btn_room_155">155</string>
    <string name="btn_room_156">156</string>
    <string name="btn_room_157">157</string>
    <string name="btn_room_158">158</string>
    <string name="btn_room_159">159</string>
    <string name="btn_room_160">160</string>
    <string name="btn_room_161">161</string>
    <string name="btn_room_162">162</string>
    <string name="btn_room_163">163</string>
    <string name="btn_room_164">164</string>
    <string name="btn_room_165">165</string>
    <string name="btn_room_166">166</string>
    <string name="btn_room_167">167</string>
    <string name="btn_room_168">168</string>
    <string name="btn_room_169">169</string>
    <string name="btn_room_170">170</string>
    <string name="btn_room_171">171</string>
    <string name="btn_room_172">172</string>
    <string name="btn_room_173">173</string>
    <string name="btn_room_174">174</string>
    <string name="btn_room_175">175</string>
    <string name="btn_room_176">176</string>
    <string name="btn_room_177">177</string>
    <string name="btn_room_178">178</string>
    <string name="btn_room_179">179</string>
    <string name="btn_room_180">180</string>
    <string name="btn_room_181">181</string>
    <string name="btn_room_182">182</string>
    <string name="btn_room_183">183</string>
    <string name="btn_room_184">184</string>
    <string name="btn_room_185">185</string>
</resources>