<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.Dormitory3">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="top"
        android:orientation="vertical">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="190dp"
          android:layout_height="190dp"
          android:layout_marginBottom="10dp"
          android:contentDescription="@string/logo"
          app:srcCompat="@drawable/logo" />

      <Button
          android:id="@+id/btn_rooms"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:layout_marginTop="30dp"
          android:textColor="@color/white"
          android:textSize="15sp"
          android:onClick="Btn_rooms"
          android:backgroundTint="@color/colorFon"
          android:text="@string/rooms" />

      <Button
          android:id="@+id/btn_search"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:textColor="@color/white"
          android:backgroundTint="@color/colorFon"
          android:textSize="15sp"
          android:onClick="Btn_search"
          android:text="@string/search" />

      <Button
          android:id="@+id/btn_add_study"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:textColor="@color/white"
          android:textSize="15sp"
          android:backgroundTint="@color/colorFon"
          android:onClick="Btn_add_study"
          android:text="@string/add_study" />

      <Button
          android:id="@+id/btn_data_manager"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:textColor="@color/white"
          android:textSize="15sp"
          android:backgroundTint="@color/colorFon"
          android:onClick="Btn_data_manager"
          android:text="@string/data_manager" />

      <Button
          android:id="@+id/btn_statistics"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:textColor="@color/white"
          android:textSize="15sp"
          android:backgroundTint="@color/colorFon"
          android:onClick="Btn_statistics"
          android:text="@string/statistics" />

      <Button
          android:id="@+id/btn_settings"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/montserrat"
          android:textColor="@color/white"
          android:textSize="15sp"
          android:backgroundTint="@color/colorFon"
          android:layout_marginBottom="20dp"
          android:onClick="Btn_settings"
          android:text="@string/settings" />

    </LinearLayout>

  </ScrollView>

</FrameLayout>