<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addStudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/loginPassword"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/loginPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/insertPassword"
                android:textColor="@color/colorFon"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="loginPass"
                android:textSize="15sp" />

            <fragment
                android:name="com.example.mydormitory.fragments.BlankFragment"
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp">

            </fragment>

            <View
                android:layout_width="match_parent"
                android:background="@drawable/lime"
                android:layout_height="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/oProg"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorSettingsText"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/version"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:text="@string/oProgText"
                android:textColor="@color/black"
                android:autoLink="email"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/author"
                android:textColor="@color/colorFon"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>