<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="top|center"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:onClick="Btn1"
                android:text="@string/btn1"
                android:backgroundTint="@color/colorFon"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/helpPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/helpPass"
                android:textColor="@color/colorFon"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:onClick="btn_helpPass"
                android:layout_marginBottom="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/helpPassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/helpPassText"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:autoLink="email"
                android:layout_marginBottom="10dp"
                android:onClick="btn_helpPassText"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>